--- a/JamesMarke/stylesheet.css
+++ b/JamesMarke/stylesheet.css
@@ -5,6 +5,8 @@ html {
 .main-image-div {
     background: url('favicon.jpg');
     padding: 130px;
-    background-size: cover;
-    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: grid;
+    border-radius: 50%;
 }
