--- a/JamesMarke/stylesheet.css
+++ b/JamesMarke/stylesheet.css
@@ -7,7 +7,8 @@ html {
     padding: 130px;
     background-size: contain;
     background-repeat: no-repeat;
-    display: grid;
+    display: flex;
     position: absolute;
+    justify-content: center;
     border-radius: 50%;
 }
