--- a/JamesMarke/stylesheet.css
+++ b/JamesMarke/stylesheet.css
@@ -10,4 +10,6 @@ html {
     display: table;
     position: absolute;
     border-radius: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
