--- a/JamesMarke/stylesheet.css
+++ b/JamesMarke/stylesheet.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 html {
     font-family: 'Poppins', sans-serif;
+    text-align: center;
 }
 .main-image-div {
     background: url('favicon.jpg');
