--- a/JamesMarke/compilation/style.css
+++ b/JamesMarke/compilation/style.css
@@ -11,6 +11,8 @@ body, html {
 }
 .complation-header {
   border-bottom: 2px solid #cccccc;
+  position: sticky;
+  
 }
 article {
   border: 4px solid #959595;
